update nav bar and profile body to flex correctly removed bullet points from ul in nav bar then spaced evenly added an img to body placed it under name and right aligned contact info

--- a/style.css
+++ b/style.css
@@ -1,18 +1,45 @@
+body{
+    margin: 0;
+}
 .nav{
     display: flex;
     background-color: antiquewhite;
     flex-flow: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    list-style: none;
 }
 .nav ul{
     display: flex;
-    flex-flow: row;
-}
-.nav li{
-    margin: 20px;
-    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    flex-grow: 1;
 }
 .body{
     background-color: gold;
+}
+.profile{
+    display: flex;
+    flex-direction: column;
+}
+.info{
+    display: flex;
+    flex-direction: column;
+}
+.profile img{
+    width: 10vw;
+    height: 10vh;
+}
+.home{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.home > * {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
